<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="historyViewModel"
            type="com.teamtripdraw.android.ui.history.HistoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.allTrips.AllTripsFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_post_detail_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/btn_post_viewer_back_description"
                android:onClick="@{()->historyViewModel.backPage()}"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_my_trip_history"
                android:textAppearance="@style/subtitle_1" />

        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/tv_history_no_trip"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/tv_history_no_trip"
            android:textAppearance="@style/subtitle_1"
            android:textColor="@color/td_dark_gray"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_history"
            app:setNoItemsMessageVisibility="@{historyViewModel.previewTrips.empty}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trip_history"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_history"
            app:spanCount="2"
            tools:listitem="@layout/item_trip_history" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
