<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="accountDeletionViewModel"
            type="com.teamtripdraw.android.ui.myPage.accountDeletion.AccountDeletionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.myPage.accountDeletion.AccountDeletionActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb_account_deletion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/td_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_account_deletion_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> accountDeletionViewModel.backPage()}"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_account_deletion_page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_account_deletion_page_title"
                android:textAppearance="@style/title_3B" />
        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/tv_account_deletion_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:text="@string/tv_account_deletion_description"
            android:textAppearance="@style/subtitle_1"
            android:textColor="@color/td_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_account_deletion" />

        <Button
            android:id="@+id/btn_account_deletion_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:backgroundTint="@color/td_light_blue"
            android:onClick="@{() -> accountDeletionViewModel.completeAccountDeletion()}"
            android:text="@string/btn_account_deletion_complete"
            android:textAppearance="@style/subtitle_1"
            android:textColor="@color/td_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>