<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="insertTripTitleDialogViewModel"
            type="com.teamtripdraw.android.ui.common.dialog.SetTripTitleDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tv_dialog_input_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/tv_dialog_input_title"
            android:textAppearance="@style/subtitle_1"
            android:textColor="@color/td_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_dialog_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="20dp"
            android:afterTextChanged="@{() -> insertTripTitleDialogViewModel.titleChangedEvent()}"
            android:background="@drawable/shape_td_main_blue_line_5_rect"
            android:ems="10"
            android:hint="@string/et_dialog_input_hint"
            android:inputType="text"
            android:maxLength="@{insertTripTitleDialogViewModel.MAX_INPUT_TITLE_LENGTH}"
            android:maxLines="1"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            android:text="@={insertTripTitleDialogViewModel.tripTitle}"
            android:textAppearance="@style/body_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_positive_dialog_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_input_title"
            app:setDialogEditTextBackground="@{insertTripTitleDialogViewModel.titleState}" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_positive_dialog_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_td_main_blue_fill_5_rect"
            android:onClick="@{() -> insertTripTitleDialogViewModel.setTripTitle()}"
            android:paddingVertical="12dp"
            android:text="@string/btn_positive_dialog_input"
            android:textAppearance="@style/body_1"
            android:textColor="@color/td_white"
            app:layout_constraintBottom_toBottomOf="@+id/et_dialog_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_dialog_input"
            app:layout_constraintTop_toTopOf="@+id/et_dialog_input" />

        <TextView
            android:id="@+id/tv_title_valid_state_warning_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/caption_1"
            android:textColor="@color/td_red"
            app:layout_constraintStart_toStartOf="@id/et_dialog_input"
            app:layout_constraintTop_toBottomOf="@id/et_dialog_input"
            app:setDialogWarningMessage="@{insertTripTitleDialogViewModel.titleState}"
            tools:text="제목을 입력해주세요" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
